Внесены правки: 1 Ссылка на почту добавлено подчёркивание 2 текст "Сб, Вс"  -  жирным 3 "поиск" выровнять, указатель не становится "рукой" и малый размер гиперкарты 4 Модальное окно "поиска" влево уходит 5 Подменю Мультисплит и полупром , в блок "увлажнители" добавить текст "Мобильные кондиционеры;" Текстовый блок будет написан так: "Мобильные кондиционеры; Мойки воздуха, увлажнители, очистители" 6 преобразование "шапки"  в "минишапку"  при скролинге на 270 пкс вниз. 7 картинка в модальном окне "схема проезда" мелкая. Я отправлял отформатированные картинки 920*505 и 1083*505 8 картинка "фасада" при увеличении имеет некачественный вид. 9 модальное окно "Все телефоны", при клике на стрелку рядом с телефоном в шапке отсутствует. 10 кнопки в окне регистрации должны быыть сначала мутными и после заполнения полей Яркими. Открытие окна регистрации в мобильном дизайне - нужно править 11 на модуле "ЧАСИКИ" не указан текст "Часы, Минуты, Секунды" 12 иконка/сслыка/логотип  "Мицубиси Хэви" в подменю "по брендам". Не исправлена 13 положение кнопки "Результаты фильтрации" - не исправлено

--- a/css/header.css
+++ b/css/header.css
@@ -675,7 +675,6 @@
         .header__user_info_info .time .timer {
           position: absolute;
           width: 270px;
-          height: 78px;
           float: left;
           top: 0px;
           left: 100%;
@@ -697,6 +696,15 @@
             color: #2a2a2a;
             background: #FFFFFF;
             padding-left: 10px; }
+          .header__user_info_info .time .timer_name_line {
+            width: 100%;
+            text-align: center;
+            background: #ffffff;
+            font: 13px/15px Verdana;
+            color: #2a2a2a; }
+            .header__user_info_info .time .timer_name_line span {
+              display: inline-block;
+              width: 52px; }
           .header__user_info_info .time .timer .timer_line {
             width: 100%;
             text-align: center; }
