--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -204,6 +204,13 @@
           max-width: 100%;
         }
       }
+      .big{
+        width: 70%;
+        float: left;
+        img{
+          width: 100%;
+        }
+      }
     }
 
   }
