--- a/css/footer.css
+++ b/css/footer.css
@@ -128,6 +128,15 @@
           color: #2a2a2a;
           background: #FFFFFF;
           padding-left: 10px; }
+        .footer_info__section_timer_wrap_name_line {
+          width: 100%;
+          text-align: center;
+          background: #ffffff;
+          font: 13px/15px Verdana;
+          color: #2a2a2a; }
+          .footer_info__section_timer_wrap_name_line span {
+            display: inline-block;
+            width: 52px; }
         .footer_info__section_timer_wrap_block {
           width: 100%;
           height: 53px;
