--- a/css/style.css
+++ b/css/style.css
@@ -752,7 +752,6 @@ table {
         .header__user_info_info .time .timer {
           position: absolute;
           width: 270px;
-          height: 78px;
           float: left;
           top: 0px;
           left: 100%;
@@ -774,6 +773,15 @@ table {
             color: #2a2a2a;
             background: #FFFFFF;
             padding-left: 10px; }
+          .header__user_info_info .time .timer_name_line {
+            width: 100%;
+            text-align: center;
+            background: #ffffff;
+            font: 13px/15px Verdana;
+            color: #2a2a2a; }
+            .header__user_info_info .time .timer_name_line span {
+              display: inline-block;
+              width: 52px; }
           .header__user_info_info .time .timer .timer_line {
             width: 100%;
             text-align: center; }
@@ -1526,6 +1534,11 @@ table {
         text-align: center; }
         .brend_block_box_logo_block a img {
           max-width: 100%; }
+      .brend_block_box_logo_block .big {
+        width: 70%;
+        float: left; }
+        .brend_block_box_logo_block .big img {
+          width: 100%; }
   .brend_block_footer {
     float: right;
     width: 100%;
@@ -7024,6 +7037,15 @@ table {
           color: #2a2a2a;
           background: #FFFFFF;
           padding-left: 10px; }
+        .footer_info__section_timer_wrap_name_line {
+          width: 100%;
+          text-align: center;
+          background: #ffffff;
+          font: 13px/15px Verdana;
+          color: #2a2a2a; }
+          .footer_info__section_timer_wrap_name_line span {
+            display: inline-block;
+            width: 52px; }
         .footer_info__section_timer_wrap_block {
           width: 100%;
           height: 53px;
@@ -7455,6 +7477,15 @@ table {
   .mini_footer_timer_wrap {
     float: left;
     width: 100%; }
+    .mini_footer_timer_wrap_name_line {
+      width: 100%;
+      text-align: center;
+      background: #ffffff;
+      font: 13px/15px Verdana;
+      color: #2a2a2a; }
+      .mini_footer_timer_wrap_name_line span {
+        display: inline-block;
+        width: 52px; }
     .mini_footer_timer_wrap_zag {
       width: 100%;
       box-sizing: border-box;
@@ -7887,8 +7918,7 @@ header {
         background-position: -84px -170px; }
   .section_crumbs_rez {
     float: left;
-    width: 19.57%;
-    margin-left: 3.93%; }
+    width: 19.57%; }
     @media (max-width: 1099px) {
       .section_crumbs_rez {
         display: none; }
