--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -162,6 +162,17 @@
           background: #FFFFFF;
           padding-left: 10px;
         }
+        &_name_line{
+          width: 100%;
+          text-align: center;
+          background: #ffffff;
+          font: 13px/15px Verdana;
+          color: #2a2a2a;
+          span{
+            display: inline-block;
+            width: 52px;
+          }
+        }
         &_block {
           width: 100%;
           height: 53px;
