--- a/sass/price.scss
+++ b/sass/price.scss
@@ -981,6 +981,11 @@
     &_rig {
       float: right;
       width: 100%;
+      margin-top: 40px;
+      h2{
+        float: right;
+        width: 80%;
+      }
       h2 {
         @media(max-width: 502px) {
           line-height: 20px;
