--- a/css/monufactur.css
+++ b/css/monufactur.css
@@ -53,6 +53,9 @@
     @media (max-width: 458px) {
       .midea_text {
         width: 100%; } }
+    .midea_text .adres {
+      font-size: 14px;
+      line-height: 16px; }
     .midea_text_info {
       width: 100%;
       background: #dbe8ce;
@@ -303,7 +306,8 @@
       margin-bottom: 19px;
       padding-left: 15px;
       padding-right: 14px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      min-height: 76px; }
       @media (max-width: 398px) {
         .gree_info_line p {
           width: 100%;
@@ -383,6 +387,9 @@
     .hisense_img img {
       float: left;
       width: 100%; }
+  .hisense .adres {
+    line-height: 14px;
+    font-size: 12px; }
   .hisense_info_line {
     width: 100%; }
     .hisense_info_line p {
@@ -396,7 +403,8 @@
       margin-bottom: 19px;
       padding-left: 15px;
       padding-right: 14px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      min-height: 88px; }
       @media (max-width: 398px) {
         .hisense_info_line p {
           width: 100%;
@@ -528,6 +536,9 @@
       width: 100%; }
   .tcl_info_line {
     width: 100%; }
+    .tcl_info_line .adres {
+      font-size: 14px;
+      line-height: 16px; }
     .tcl_info_line p {
       float: left;
       width: 49.25%;
@@ -539,7 +550,8 @@
       margin-bottom: 19px;
       padding-left: 15px;
       padding-right: 14px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      min-height: 84px; }
       @media (max-width: 398px) {
         .tcl_info_line p {
           width: 100%;
