--- a/css/modal.css
+++ b/css/modal.css
@@ -692,7 +692,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  max-width: 700px;
+  max-width: 700px !important;
   background: #FFFFFF;
   border: 1px solid #014366;
   -webkit-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
@@ -703,7 +703,8 @@
   z-index: 99999;
   display: none; }
   .foto_block img {
-    width: 100%; }
+    width: 100%;
+    max-width: 700px; }
   .foto_block .close_foto {
     display: block;
     position: absolute;
@@ -1387,7 +1388,7 @@
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
     padding-left: 22px; }
-    @media (max-height: 550px) {
+    @media (max-height: 750px) {
       .comment_block_header {
         min-height: 47px; } }
     .comment_block_header h3 {
@@ -1396,7 +1397,7 @@
       font: 18px/30px 'Roboto-Medium';
       color: #024753;
       margin-top: 17px; }
-      @media (max-height: 550px) {
+      @media (max-height: 750px) {
         .comment_block_header h3 {
           margin-top: 8.5px; } }
       .comment_block_header h3 .comment_icon {
@@ -1411,8 +1412,8 @@
     width: 100%;
     float: left;
     position: relative;
-    padding-top: 28px;
-    padding-bottom: 28px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     border: 1px solid #cdcdcd;
     border-top: none; }
     .comment_block .individuals_block .slick-arrow {
@@ -1432,7 +1433,8 @@
       float: left;
       padding: 0px 30px;
       box-sizing: border-box;
-      position: relative; }
+      position: relative;
+      cursor: auto; }
       .comment_block .individuals_block_slide .help_baner {
         position: absolute;
         padding: 15px 22px;
@@ -1467,7 +1469,7 @@
       .comment_block .individuals_block_slide_header {
         width: 100%;
         min-height: 110px; }
-        @media (max-height: 550px) {
+        @media (max-height: 750px) {
           .comment_block .individuals_block_slide_header {
             min-height: 0px; } }
         .comment_block .individuals_block_slide_header_men {
@@ -1486,9 +1488,9 @@
               width: 100%; } }
           .comment_block .individuals_block_slide_header_men_foto {
             float: left; }
-            @media (max-height: 550px) {
+            @media (max-height: 750px) {
               .comment_block .individuals_block_slide_header_men_foto {
-                height: 95px; }
+                height: 101px; }
                 .comment_block .individuals_block_slide_header_men_foto img {
                   max-height: 100%; } }
           .comment_block .individuals_block_slide_header_men_info_block {
@@ -1502,7 +1504,7 @@
               width: 100%;
               height: 17px;
               margin-top: 22px; }
-              @media (max-height: 550px) {
+              @media (max-height: 750px) {
                 .comment_block .individuals_block_slide_header_men_info_block .star_line {
                   margin-top: 12px; } }
               .comment_block .individuals_block_slide_header_men_info_block .star_line a {
@@ -1519,7 +1521,7 @@
               font: 12px/24px 'robotoregular';
               color: #888888;
               margin-top: 10px; }
-              @media (max-height: 550px) {
+              @media (max-height: 750px) {
                 .comment_block .individuals_block_slide_header_men_info_block .data {
                   margin-top: 15px; } }
         .comment_block .individuals_block_slide_header_yandex_block {
@@ -1528,7 +1530,7 @@
           border: 2px solid #024753;
           box-sizing: border-box;
           min-height: 110px; }
-          @media (max-height: 550px) {
+          @media (max-height: 750px) {
             .comment_block .individuals_block_slide_header_yandex_block {
               min-height: 0px; }
               .comment_block .individuals_block_slide_header_yandex_block img {
@@ -1552,7 +1554,7 @@
             width: 40%;
             margin-top: 15.5px;
             margin-right: 5%; }
-            @media (max-height: 550px) {
+            @media (max-height: 750px) {
               .comment_block .individuals_block_slide_header_yandex_block_baner_yandex {
                 margin-top: 5.5px; } }
             .comment_block .individuals_block_slide_header_yandex_block_baner_yandex img {
@@ -1591,7 +1593,7 @@
             display: block; }
         .comment_block .individuals_block_slide_content .main_wrap {
           height: 54px; }
-          @media (max-height: 550px) {
+          @media (max-height: 750px) {
             .comment_block .individuals_block_slide_content .main_wrap {
               height: 34px; } }
         .comment_block .individuals_block_slide_content_main {
@@ -1609,7 +1611,7 @@
             width: 90%; }
           .comment_block .individuals_block_slide_content_detail .detail_wrap {
             height: 72px; }
-            @media (max-height: 550px) {
+            @media (max-height: 750px) {
               .comment_block .individuals_block_slide_content_detail .detail_wrap {
                 height: 52px; } }
           .comment_block .individuals_block_slide_content_detail_worth {
