--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -47,7 +47,7 @@
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
     padding-left: 22px;
-    @media(max-height: 550px){
+    @media(max-height: 750px){
       min-height: 47px;
     }
     h3{
@@ -56,7 +56,7 @@
       font: 18px/30px 'Roboto-Medium';
       color: #024753;
       margin-top: 17px;
-      @media(max-height: 550px){
+      @media(max-height: 750px){
         margin-top: 8.5px;
       }
       .comment_icon{
@@ -74,8 +74,8 @@
     width: 100%;
     float: left;
     position: relative;
-    padding-top: 28px;
-    padding-bottom: 28px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     border: 1px solid #cdcdcd;
     border-top: none;
     .slick-arrow{
@@ -102,6 +102,7 @@
       padding: 0px 30px;
       box-sizing: border-box;
       position: relative;
+      cursor: auto;
     .help_baner{
       position: absolute;
       padding: 15px 22px;
@@ -141,7 +142,7 @@
       &_header{
         width: 100%;
         min-height: 110px;
-        @media(max-height: 550px){
+        @media(max-height: 750px){
           min-height:0px
         }
         &_men{
@@ -160,8 +161,8 @@
           }
           &_foto{
             float: left;
-            @media(max-height: 550px){
-              height: 95px;
+            @media(max-height: 750px){
+              height: 101px;
               img{
                 max-height: 100%;
               }
@@ -179,7 +180,7 @@
               width: 100%;
               height: 17px;
               margin-top: 22px;
-              @media(max-height: 550px){
+              @media(max-height: 750px){
                 margin-top: 12px;
               }
               a {
@@ -199,7 +200,7 @@
               font: 12px/24px 'robotoregular';
               color: #888888;
               margin-top: 10px;
-              @media(max-height: 550px){
+              @media(max-height: 750px){
                 margin-top: 15px;
               }
             }
@@ -211,7 +212,7 @@
           border:2px solid rgba(2,71,83,1);
           box-sizing: border-box;
           min-height: 110px;
-          @media(max-height: 550px){
+          @media(max-height: 750px){
             min-height: 0px;
             img{
               height: 91px;
@@ -237,7 +238,7 @@
             width: 40%;
             margin-top: 15.5px;
             margin-right: 5%;
-            @media(max-height: 550px){
+            @media(max-height: 750px){
               margin-top: 5.5px;
             }
 
@@ -290,7 +291,7 @@
         }
         .main_wrap{
           height: 54px;
-         @media(max-height: 550px){
+         @media(max-height: 750px){
            height: 34px;
          }
 
@@ -313,7 +314,7 @@
           }
           .detail_wrap{
             height: 72px;
-            @media(max-height: 550px){
+            @media(max-height: 750px){
               height: 52px;
             }
 
